--- a/pages/Catalog.html
+++ b/pages/Catalog.html
@@ -14,16 +14,16 @@
 </head>
 <body>
     <header class="header container">
-        <a class="header__logo" href="#">
+        <a class="header__logo" href="../index.html">
             <img class="header__logo-img" src="../images/Header/Union.png" alt="Logotype DLK" width="100" height="52">
         </a>
         <nav class="header__nav">
             <ul class="header__nav-list">
                 <li class="header__nav-item">
-                    <a class="header__nav-link" href="#">BLOG</a>
+                    <a class="header__nav-link" href="../pages/blog.html">BLOG</a>
                 </li>
                 <li class="header__nav-item">
-                    <a class="header__nav-link" href="#">CATALOG</a>
+                    <a class="header__nav-link" href="../pages/catalog.html">CATALOG</a>
                 </li>
                 <li class="header__nav-item">
                     <a class="header__nav-link" href="#">ABOUT US</a>
@@ -34,57 +34,51 @@
             <li class="header__list-item">
                 <div class="header__list-wrapper">
                     <form class="header__list-form">
-                        <button class="header__list-btn" type="submit">
-                            <img class="header__list-icon" src="../images/Header/XMLID.png" alt="magnifying glass">
-                        </button>
+                        <button class="header__list-btn" type="submit" aria-label="search"></button>
                     </form>
                 </div>
             </li>
-            <li class="header__list-item"><a class="header__list-link" href="#">CONTACT US</a></li>
+            <li class="header__list-item"><a class="header__list-link" href="../pages/contactUs.html">CONTACT US</a></li>
         </ul>
     </header>
-    <section class="block container">
-        <h1 class="block__title"
-        tabindex="0">CATEGORY PRODUCTS</h1>
-        <ul class="block__breadcrumps">
-            <li class="block__breadcrumps-item">
-                <p class="block__breadcrumps-text" tabindex="0">Home</p>
+    <section class="breadcrumbs container">
+        <h1 class="breadcrumbs__title" tabindex="0">CATEGORY PRODUCTS</h1>
+        <ol class="breadcrumbs__list">
+            <li class="breadcrumbs__list-item">
+                <a class="breadcrumbs__list-link" href="../index.html" tabindex="0">Home</a>
             </li>
-            <li class="block__breadcrumps-item">
-                <img class="block__breadcrumps-img" tabindex="0" src="../images/Category/Vector(Stroke).png" alt="breadcrumps__list-vector">
+            <li class="breadcrumbs__list-item breadcrumbs__list-text">
+                <a class="breadcrumbs__list-link" href="../pages/catalog.html" tabindex="0">Catalog</a> 
             </li>
-            <li class="block__breadcrumps-item">
-                <p class="block__breadcrumps-text catalog" tabindex="0">Catalog</p>
-            </li>
-        </ul>
+        </ol>
     </section>   
     <section class="block__services container">
             <ul class="block__services-list">
                 <li class="block__services-item">
                     <img class="block__services-sweater" src="../images/Category/sweater.jpg" alt="block__services-pic">
-                    <a href="#" class="block__services-link">APPAREL KIDS</a>
+                    <a href="../pages/toys.html" class="block__services-link">APPAREL KIDS</a>
                 </li>
                 <li class="block__services-item block__services-sock">
                     <img class="block__services-sock" src="../images/Category/Product-two.png" alt="services__list-pic">
-                    <a href="#" class="block__services-link">HOLIDAY SHOP</a>
+                    <a href="../pages/toys.html" class="block__services-link">HOLIDAY SHOP</a>
                 </li>
                 <li class="block__services-item block__services-deer">
                     <img class="block__services-deer" src="../images/Category/Product_bkd-free.png" alt="services__list-pic">
-                    <a href="#" class="block__services-link">TOYS</a>
+                    <a href="../pages/toys.html" class="block__services-link">TOYS</a>
                 </li>
             </ul>
             <ul class="block__services-aside">
                 <li class="block__services-item block__services-yeti-item">
                     <img class="block__services-yeti" src="../images/Category/Product-four.png" alt="services__list-pic">
-                    <a href="#" class="block__services-link">ACCESSORIES</a>
+                    <a href="../pages/toys.html" class="block__services-link">ACCESSORIES</a>
                 </li>
                 <li class="block__services-item block__services-flamingos-item">
                     <img class="block__services-flamingos" src="../images/Category/flamingo.jpg" alt="services__list-pic">
-                    <a href="#" class="block__services-link">SALE</a>
+                    <a href="../pages/toys.html" class="block__services-link">SALE</a>
                 </li>
                 <li class="block__services-item">
                     <img class="block__services-dress" src="../images/Category/dress.jpg" alt="services__list-pic">
-                    <a href="#" class="block__services-link block__services-link-dress">APPAREL ADULTS</a>
+                    <a href="../pages/toys.html" class="block__services-link block__services-link-dress">APPAREL ADULTS</a>
                 </li>
             </ul>   
     </section>
@@ -159,44 +153,49 @@
                     </li>
                     <li class="footer__info-icon">
                         <a class="footer__info-link" href="#">
-                            <img class="footer__info-img" src="../images/footer/Facebook.png" alt="Logotype Facebook">
+                            <img class="footer__info-img" src="../images/footer/facebook.svg" alt="Logotype Facebook">
                         </a>
                     </li>
                     <li class="footer__info-icon">
                         <a class="footer__info-link" href="#">
-                            <img class="footer__info-img" src="../images/footer/Twitter.png" alt="Logotype Twitter">
+                            <img class="footer__info-img" src="../images/footer/twitter.svg" alt="Logotype Twitter">
                         </a>
                     </li>
                     <li class="footer__info-icon">
                         <a class="footer__info-link" href="#">
-                            <img class="footer__info-img" src="../images/footer/Pinterest.png" alt="Logotype Pinterest">
+                            <img class="footer__info-img" src="../images/footer/pinterest.svg" alt="Logotype Pinterest">
                         </a>
                     </li>
                     <li class="footer__info-icon">
                         <a class="footer__info-link" href="#">
-                            <img class="footer__info-img" src="../images/footer/Instagram.png" alt="Logotype Instagram">
+                            <img class="footer__info-img" src="../images/footer/instagram.svg" alt="Logotype Instagram">
                         </a>
                     </li>
                 </ul>
             </section>
             <section class="footer__subtitle">
                 <ul class="footer__subtitle-list">
-                    <li class="footer__subtitle-item">
+                    <li class="footer__subtitle-wrapper">
+                        <p class="subtitle__signature" tabindex="0">Company Rating</p>
                         <div class="footer__subtitle-rating">
-                            <p class="footer__subtitle-ratingStar" tabindex="0">Company Rating</p>
-                            <div class="footer__subtitle-group">
-                                <input class="footer__subtitle-star" type="radio" name="rating" value="one" aria-label="terrible" checked>
-                                <input class="footer__subtitle-star" type="radio" name="rating" value="two" aria-label="bearable">
-                                <input class="footer__subtitle-star" type="radio" name="rating" value="free" aria-label="normally">
-                                <input class="footer__subtitle-star" type="radio" name="rating" value="four" aria-label="fine">
-                                <input class="footer__subtitle-star" type="radio" name="rating" value="five" aria-label="wonderful">
+                            <div class="footer__subtitle-items">
+                                <input class="footer__subtitle-item" id="rating__star-five" type="radio" name="rating" value="five">
+                                <label class="footer__subtitle-label" for="rating__star-five"></label>
+                                <input class="footer__subtitle-item" id="rating__star-four" type="radio" name="rating" value="four">
+                                <label class="footer__subtitle-label" for="rating__star-four"></label>
+                                <input class="footer__subtitle-item" id="rating__star-free" type="radio" name="rating" value="free">
+                                <label class="footer__subtitle-label" for="rating__star-free"></label>
+                                <input class="footer__subtitle-item" id="rating__star-two" type="radio" name="rating" value="two">
+                                <label class="footer__subtitle-label" for="rating__star-two"></label>
+                                <input class="footer__subtitle-item" id="rating__star-one" type="radio" name="rating" value="one">
+                                <label class="footer__subtitle-label" for="rating__star-one"></label>
                             </div>
                         </div>
                     </li>
-                    <li class="footer__subtitle-item">
-                        <p class="footer__subtitle-signature">Copyright © 2018 Dlk • Design Life Kids</p>
+                    <li class="footer__subtitle-text">
+                        <p class="footer__subtitle-signature subtitle__signature-title">Copyright © 2018 Dlk • Design Life Kids</p>
                     </li>
-                    <li class="footer__subtitle-item">
+                    <li class="footer__subtitle-text">
                         <a class="footer__subtitle-signature footer__subtitle-direct" href="#"><p>Web Design — Direct Line Development</p></a>
                     </li>
                 </ul>
