--- a/pages/Toys.html
+++ b/pages/Toys.html
@@ -11,18 +11,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Montserrat:wght@400;700&family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-</head>
     <header class="header container">
-        <a class="header__logo" href="#">
+        <a class="header__logo" href="../index.html">
             <img class="header__logo-img" src="../images/Header/Union.png" alt="Logotype DLK" width="100" height="52">
         </a>
         <nav class="header__nav">
             <ul class="header__nav-list">
                 <li class="header__nav-item">
-                    <a class="header__nav-link" href="#">BLOG</a>
+                    <a class="header__nav-link" href="../pages/blog.html">BLOG</a>
                 </li>
                 <li class="header__nav-item">
-                    <a class="header__nav-link" href="#">CATALOG</a>
+                    <a class="header__nav-link" href="../pages/catalog.html">CATALOG</a>
                 </li>
                 <li class="header__nav-item">
                     <a class="header__nav-link" href="#">ABOUT US</a>
@@ -33,34 +32,26 @@
             <li class="header__list-item">
                 <div class="header__list-wrapper">
                     <form class="header__list-form">
-                        <button class="header__list-btn" type="submit">
-                            <img class="header__list-icon" src="../images/Header/XMLID.png" alt="magnifying glass">
-                        </button>
+                        <button class="header__list-btn" type="submit" aria-label="search"></button>
                     </form>
                 </div>
             </li>
-            <li class="header__list-item"><a class="header__list-link" href="#">CONTACT US</a></li>
+            <li class="header__list-item"><a class="header__list-link" href="../pages/contactUs.html">CONTACT US</a></li>
         </ul>
     </header>
-    <section class="breadcrumps container">
-        <h1 class="breadcrumps__title">TOY FOR KIDS</h1>
-        <ul class="breadcrumps__list">
-            <li class="breadcrumps__list-item" tabindex="0">
-                <p class="breadcrumps__list-text">Home</p>
+    <section class="breadcrumbs container">
+        <h1 class="breadcrumbs__title">TOY FOR KIDS</h1>
+        <ol class="breadcrumbs__list">
+            <li class="breadcrumbs__list-item" tabindex="0">
+                <a class="breadcrumbs__list-link" href="../index.html">Home</a>
             </li>
-            <li class="breadcrumps__list-item" tabindex="0">
-                <img class="breadcrumps__list-img" src="../images/Category/Vector(Stroke).png" alt="breadcrumps__list-vector">
+            <li class="breadcrumbs__list-item" tabindex="0">
+                <a class="breadcrumbs__list-link" href="../pages/catalog.html">Catalog</a>
             </li>
-            <li class="breadcrumps__list-item" tabindex="0">
-                <p class="breadcrumps__list-text">Catalog</p>
+            <li class="breadcrumbs__list-item breadcrumbs__list-text">
+                <a class="breadcrumbs__list-link" href="../pages/toys.html" tabindex="0">Toys</a> 
             </li>
-            <li class="breadcrumps__list-item" tabindex="0">
-                <img class="breadcrumps__list-img" src="../images/Category/Vector(Stroke).png" alt="breadcrumps__list-vector">
-            </li>
-            <li class="breadcrumps__list-item" tabindex="0">
-                <p class="breadcrumps__list-text breadcrumps__list-toys">Toys</p>
-            </li>
-        </ul>
+        </ol>
     </section>
     <div class="div">
         <form class="div__form container">
@@ -117,46 +108,52 @@
                 </ul>
             </div>
             <div class="div__form-btn">
-                <button tabindex="0">APPLY</button>
+                <button tabindex="0" class="div__form-pic">APPLY</button>
             </div>
         </form>
     </div>
     <section class="cards container">
         <ul class="cards__list">
             <li class="cards__list-item" tabindex="0">
-                <img src="../images/Category/shark.png" alt="cards__list-pic" class="cards__list-img">
+                <img class="cards__list-img" src="../images/Category/shark.png" alt="cards__list-pic">
+                <a class="cards__list-link" href="#">LEARN MORE</a>                
                 <p class="cards__list-text" tabindex="0">SHARKY BEAN BAG CHAIR COVER</p>
                 <h2 class="cards__list-subtitle" tabindex="0">$60.00 USD</h2>
             </li>
-            <li class="cards__list-item" tabindex="0">
-                <img src="../images/Category/brass.png" alt="cards__list-pic" class="cards__list-img">
+            <li class="cards__list-item" tabindex="0">                
+                <img class="cards__list-img" src="../images/Category/brass.png" alt="cards__list-pic">
+                <a class="cards__list-link" href="#">LEARN MORE</a>                
                 <p class="cards__list-text" tabindex="0">BRASS DECO FRAMES</p>
                 <h2 class="cards__list-subtitle" tabindex="0">$66.00 USD</h2>
             </li>
-            <li class="cards__list-item" tabindex="0">
-                <img src="../images/Category/cibo.png" alt="cards__list-pic" class="cards__list-img">
+            <li class="cards__list-item" tabindex="0">                
+                <img class="cards__list-img" src="../images/Category/cibo.png" alt="cards__list-pic">
+                <a class="cards__list-link" href="#">LEARN MORE</a>               
                 <p class="cards__list-text" tabindex="0">CIBO FULL APRON</p>
                 <h2 class="cards__list-subtitle" tabindex="0">$60.00 USD</h2>
             </li>
-            <li class="cards__list-item" tabindex="0">
-                <img src="../images/Category/gatcha.png" alt="cards__list-pic" class="cards__list-img">
+            <li class="cards__list-item" tabindex="0">               
+                <img class="cards__list-img" src="../images/Category/gatcha.png" alt="cards__list-pic">
+                <a class="cards__list-link" href="#">LEARN MORE</a>                
                 <p class="cards__list-text" tabindex="0">GATCHA GATCHA GUMBALL MACHINE</p>
                 <h2 class="cards__list-subtitle" tabindex="0">$56.00 USD</h2>
             </li>
-            <li class="cards__list-item" tabindex="0">
-                <img src="../images/Category/advent.png" alt="cards__list-pic" class="cards__list-img">
+            <li class="cards__list-item" tabindex="0">                
+                <img class="cards__list-img" src="../images/Category/advent.png" alt="cards__list-pic">
+                <a class="cards__list-link" href="#">LEARN MORE</a>                
                 <p class="cards__list-text" tabindex="0">CHRISTMAS ADVENT SCENTED CANDLE</p>
                 <h2 class="cards__list-subtitle" tabindex="0">$29.00 USD</h2>
             </li>
-            <li class="cards__list-item cards__list-desc" tabindex="0">
-                <img src="../images/Category/tea.png" alt="cards__list-pic" class="cards__list-img">
+            <li class="cards__list-item cards__list-desc" tabindex="0">                
+                <img class="cards__list-img" src="../images/Category/tea.png" alt="cards__list-pic">
+                <a class="cards__list-link" href="#">LEARN MORE</a>               
                 <p class="cards__list-text" tabindex="0">TANGLE SPINNING TEA LIGHT</p>
                 <h2 class="cards__list-subtitle" tabindex="0">$56.00 USD</h2>
             </li>
         </ul>
         <ul class="cards__click">
             <li class="cards__click-control">
-                <img class="cards__click-img" src="../images/Category/Vector+.png" alt="cards__list-arrow"  tabindex="0">
+                <button class="cards__click-btn cards__click-arrowLeft" type="button" aria-label="arrow"></button>
             </li>
             <li class="cards__click-numbers">
                 <p class="cards__click-number cards__click-one" tabindex="0">1</p>
@@ -165,7 +162,7 @@
                 <p class="cards__click-number" tabindex="0">4</p> 
             </li>
             <li class="cards__click-control">
-                <img class="cards__click-img" src="../images/Category/Vector-.png" alt="cards__list-arrow"  tabindex="0">
+                <button class="cards__click-btn cards__click-arrowRight" type="button" aria-label="arrow"></button>
             </li>
         </ul>
     </section>
@@ -234,44 +231,49 @@
                     </li>
                     <li class="footer__info-icon">
                         <a class="footer__info-link" href="#">
-                            <img class="footer__info-img" src="../images/footer/Facebook.png" alt="Logotype Facebook">
+                            <img class="footer__info-img" src="../images/footer/facebook.svg" alt="Logotype Facebook">
                         </a>
                     </li>
                     <li class="footer__info-icon">
                         <a class="footer__info-link" href="#">
-                            <img class="footer__info-img" src="../images/footer/Twitter.png" alt="Logotype Twitter">
+                            <img class="footer__info-img" src="../images/footer/twitter.svg" alt="Logotype Twitter">
                         </a>
                     </li>
                     <li class="footer__info-icon">
                         <a class="footer__info-link" href="#">
-                            <img class="footer__info-img" src="../images/footer/Pinterest.png" alt="Logotype Pinterest">
+                            <img class="footer__info-img" src="../images/footer/pinterest.svg" alt="Logotype Pinterest">
                         </a>
                     </li>
                     <li class="footer__info-icon">
                         <a class="footer__info-link" href="#">
-                            <img class="footer__info-img" src="../images/footer/Instagram.png" alt="Logotype Instagram">
+                            <img class="footer__info-img" src="../images/footer/instagram.svg" alt="Logotype Instagram">
                         </a>
                     </li>
                 </ul>
             </section>
             <section class="footer__subtitle">
                 <ul class="footer__subtitle-list">
-                    <li class="footer__subtitle-item">
+                    <li class="footer__subtitle-wrapper">
+                        <p class="subtitle__signature" tabindex="0">Company Rating</p>
                         <div class="footer__subtitle-rating">
-                            <p class="footer__subtitle-ratingStar" tabindex="0">Company Rating</p>
-                            <div class="footer__subtitle-group">
-                                <input class="footer__subtitle-star" type="radio" name="rating" value="one" aria-label="terrible" checked>
-                                <input class="footer__subtitle-star" type="radio" name="rating" value="two" aria-label="bearable">
-                                <input class="footer__subtitle-star" type="radio" name="rating" value="free" aria-label="normally">
-                                <input class="footer__subtitle-star" type="radio" name="rating" value="four" aria-label="fine">
-                                <input class="footer__subtitle-star" type="radio" name="rating" value="five" aria-label="wonderful">
+                            <div class="footer__subtitle-items">
+                                <input class="footer__subtitle-item" id="rating__star-five" type="radio" name="rating" value="five">
+                                <label class="footer__subtitle-label" for="rating__star-five"></label>
+                                <input class="footer__subtitle-item" id="rating__star-four" type="radio" name="rating" value="four">
+                                <label class="footer__subtitle-label" for="rating__star-four"></label>
+                                <input class="footer__subtitle-item" id="rating__star-free" type="radio" name="rating" value="free">
+                                <label class="footer__subtitle-label" for="rating__star-free"></label>
+                                <input class="footer__subtitle-item" id="rating__star-two" type="radio" name="rating" value="two">
+                                <label class="footer__subtitle-label" for="rating__star-two"></label>
+                                <input class="footer__subtitle-item" id="rating__star-one" type="radio" name="rating" value="one">
+                                <label class="footer__subtitle-label" for="rating__star-one"></label>
                             </div>
                         </div>
                     </li>
-                    <li class="footer__subtitle-item">
-                        <p class="footer__subtitle-signature">Copyright © 2018 Dlk • Design Life Kids</p>
+                    <li class="footer__subtitle-text">
+                        <p class="footer__subtitle-signature subtitle__signature-title">Copyright © 2018 Dlk • Design Life Kids</p>
                     </li>
-                    <li class="footer__subtitle-item">
+                    <li class="footer__subtitle-text">
                         <a class="footer__subtitle-signature footer__subtitle-direct" href="#"><p>Web Design — Direct Line Development</p></a>
                     </li>
                 </ul>
